feature(permissions): Retirado register da controller de Auth
